# fmp3_raspberrypi_pico

./: .gitignore  README.md  pico_fmp3.code-workspace
fmp3/: CMakeLists.txt  MANIFEST  README.txt  configure.rb  fmp3.cmake
fmp3/arch/arm_m_gcc/: MANIFEST  README.txt
fmp3/arch/arm_m_gcc/common/: Makefile.core  arm_m.h  core_asm.inc  core_cfg1_out.h  core_check.trb  core_design.txt  core_insn.h  core_kernel.h  core_kernel.trb  core_kernel_impl.c  core_kernel_impl.h  core_kernel_impl_v6m.h  core_kernel_v6m.trb  core_offset.trb  core_offset_v6m.trb  core_pcb.h  core_rename.def  core_rename.h  core_sil.h  core_stddef.h  core_support.S  core_support_v6m.S  core_sym.def  core_sym_v6m.def  core_test.h  core_unrename.h  core_user.txt  start.S
fmp3/arch/arm_m_gcc/rp2040/: MANIFEST  Makefile.chip  RP2040.h  arch.cmake  chip_asm.inc  chip_cfg1_out.h  chip_ipi.c  chip_ipi.cfg  chip_ipi.h  chip_kernel.h  chip_kernel.trb  chip_kernel_impl.h  chip_rename.def  chip_rename.h  chip_serial.c  chip_serial.cfg  chip_serial.h  chip_sil.h  chip_stddef.h  chip_syssvc.h  chip_unrename.h  toolchain.cmake
fmp3/arch/arm_m_gcc/rp2350/: MANIFEST  Makefile.chip  RP2350.h  arch.cmake  chip_asm.inc  chip_ipi.c  chip_ipi.h  chip_kernel.h  chip_kernel.trb  chip_kernel_impl.c  chip_kernel_impl.h  chip_serial.c  chip_serial.cfg  chip_serial.h  chip_sil.h  chip_stddef.h  chip_syssvc.h  toolchain.cmake
fmp3/arch/gcc/: tool_stddef.h  toolchain.cmake
fmp3/arch/tracelog/: trace_dump.c  trace_log.c  trace_log.h
fmp3/cfg/: GenFile.rb  SRecord.rb  cfg.rb  pass1.rb  pass2.rb
fmp3/cfg/doc/: cfg_user.txt
fmp3/doc/: configurator.txt  design.txt  fmp_spec.txt  migration.txt  porting.txt  user.txt  version.txt
fmp3/include/: itron.h  kernel.h  kernel_fncode.h  log_output.h  queue.h  sil.h  t_stddef.h  t_stdlib.h  t_syslog.h
fmp3/kernel/: Makefile.kernel  alarm.c  alarm.h  alarm.trb  allfunc.h  check.h  cyclic.c  cyclic.h  cyclic.trb  dataqueue.c  dataqueue.h  dataqueue.trb  eventflag.c  eventflag.h  eventflag.trb  exception.c  exception.h  exception.trb  genoffset.trb  interrupt.c  interrupt.h  interrupt.trb  kernel.trb  kernel_api.def  kernel_check.trb  kernel_impl.h  kernel_int.h  kernel_rename.def  kernel_rename.h  kernel_sym.def  kernel_unrename.h  mempfix.c  mempfix.h  mempfix.trb  mutex.c  mutex.h  mutex.trb  pcb.h  pridataq.c  pridataq.h  (+25 more)
fmp3/sample/: Makefile  sample1.c  sample1.cfg  sample1.h
fmp3/syssvc/: banner.c  banner.cfg  banner.h  histogram.c  histogram.h  logtask.c  logtask.cfg  logtask.h  serial.c  serial.cfg  serial.h  serial_cfg.c  syslog.c  syslog.cfg  syslog.h  syssvc.cmake  test_svc.c  test_svc.h
fmp3/test/: MANIFEST  perf0.c  perf0.cfg  perf0.h  perf1.c  perf1.cfg  perf1.h  perf2.c  perf2.cfg  perf2.h  perf3.c  perf3.cfg  perf3.h  perf4.c  perf4.cfg  perf4.h  perf5.c  perf5.cfg  perf5.h  test_common.h  test_common1.cfg  test_cpuexc.cfg  test_cpuexc.h  test_cpuexc.txt  test_cpuexc1.c  test_cpuexc10.c  test_cpuexc2.c  test_cpuexc3.c  test_cpuexc4.c  test_cpuexc5.c  test_cpuexc6.c  test_cpuexc7.c  test_cpuexc8.c  test_cpuexc9.c  test_dlynse.c  test_dlynse.cfg  test_dlynse.h  test_dtq1.c  test_dtq1.cfg  test_dtq1.h  (+94 more)
fmp3/utils/: applyrename.rb  genrename.rb  gentest.rb  makerelease.rb  split.rb  uf2conv.rb  uf2families.json
pico1_proj/: CMakeLists.txt
pico2_proj/: CMakeLists.txt
